--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
     "moment": "^2.27.0",
+    "mongoose": "^5.9.21",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "xlsx": "^0.16.3"
