--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
