--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
+    "exceljs": "^4.1.1",
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
